--- a/index.html
+++ b/index.html
@@ -8,10 +8,49 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
     <h1>Hello, world!</h1>
-
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-3">Playback App</div>
+        <div class="col-md-9">
+          <a href="https://playback-app.herokuapp.com">
+            <img class="img-fluid" src="assets/playback.png">
+          </a>
+        </div>
+        <div class="col-md-12">Project 1 Desc.</div>
+      </div>
+   
+      <div class="row">
+        <div class="col-md-3">Fruitful App</div>
+        <div class="col-md-9">
+          <a href="https://fruitful-app.herokuapp.com/">
+            <img class="img-fluid" src="assets/fruitful.png">
+          </a>
+        </div>
+        <div class="col-md-12">Project 2 Desc.</div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">Simon Says Game</div>
+        <div class="col-md-9">
+          <a href="https://kdanna.github.io/WDI_project1/">
+            <img class="img-fluid" src="assets/simon_says.png">
+          </a>
+        </div>
+        <div class="col-md-12">Project 3 Desc.</div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">Peak Finder App</div>
+        <div class="col-md-9">
+          <a href="https://co-14ers.herokuapp.com/">
+            <img class="img-fluid" src="assets/peak_finder.png">
+          </a>
+        </div>
+        <div class="col-md-12">Project 4 Desc.</div>
+      </div>
+    </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
