--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>K.D. Portfolio</title>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,45 +12,58 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <div class="container-fluid">
+
+  <div class="container-fluid">   
+    
       <div class="row">
-        <div class="col-md-3">Playback App</div>
-        <div class="col-md-9">
+        <div class="col-md-2">Playback App</div>
+        <div class="col-md-10">
           <a href="https://playback-app.herokuapp.com">
             <img class="img-fluid" src="assets/playback.png">
           </a>
         </div>
+      </div>
+      <div class="row">
         <div class="col-md-12">Project 1 Desc.</div>
       </div>
+      
    
       <div class="row">
-        <div class="col-md-3">Fruitful App</div>
-        <div class="col-md-9">
+        <div class="col-md-2">Fruitful App</div>
+        <div class="col-md-10">
           <a href="https://fruitful-app.herokuapp.com/">
             <img class="img-fluid" src="assets/fruitful.png">
           </a>
         </div>
-        <div class="col-md-12">Project 2 Desc.</div>
       </div>
       <div class="row">
-        <div class="col-md-3">Simon Says Game</div>
-        <div class="col-md-9">
+          <div class="col-md-12">Project 2 Desc.</div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-2">Simon Says Game</div>
+        <div class="col-md-10">
           <a href="https://kdanna.github.io/WDI_project1/">
             <img class="img-fluid" src="assets/simon_says.png">
           </a>
         </div>
-        <div class="col-md-12">Project 3 Desc.</div>
       </div>
       <div class="row">
-        <div class="col-md-3">Peak Finder App</div>
-        <div class="col-md-9">
+        <div class="col-md-12">Project 3 Desc.</div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-2">Peak Finder App</div>
+        <div class="col-md-10">
           <a href="https://co-14ers.herokuapp.com/">
             <img class="img-fluid" src="assets/peak_finder.png">
           </a>
         </div>
+      </div>
+      <div class="row">
         <div class="col-md-12">Project 4 Desc.</div>
       </div>
+
     </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
